k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: energy-p2p
  labels:
    name: energy-p2p
    project: data-platform
    environment: development
